@@ -800,6 +800,11 @@ See Section~\ref{creating-debugging-options-output-args}.
  \<-AatfCacheSize>
 Miscellaneous debugging options; see Section~\ref{creating-debugging-options-misc}.
 
+\item
+ \<-AprintGitProperties>
+Print information about the git repository from which the Checker Framework
+was compiled.
+
 \end{itemize}
 
 
